--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header Section -->
   <header>
-    <h1>Hello, I'm [Your Name]</h1>
+    <h1>Hello, I'm Jesuniran Emmanuel</h1>
     <p>A Web Developer and Computer Science Undergraduate</p>
     <nav>
       <a href="#about">About</a>
@@ -59,7 +59,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 [Your Name] | Follow me on <a href="#">GitHub</a></p>
+    <p>© 2025 Jesuniran Emmanuel | Follow me on <a href="#">GitHub</a></p>
   </footer>
 
   <script src="script.js"></script>
