--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
   <div class="projectsSlide">
     <div class="project">
       <h3>Project 1</h3>
-      <p>Description of your project.</p>
+      <p>unfinished.</p>
       <a href="#" target="_blank">View Project</a> | <a href="#" target="_blank">GitHub Repo</a>
     </div>
     <div class="project">
       <h3>Project 2</h3>
-      <p>Description of your project.</p>
+      <p>unfinished.</p>
       <a href="#" target="_blank">View Project</a> | <a href="#" target="_blank">GitHub Repo</a>
     </div>
     <div class="project">
       <h3>Project 3</h3>
-      <p>Description of your project.</p>
+      <p>unfinished.</p>
       <a href="#" target="_blank">View Project</a> | <a href="#" target="_blank">GitHub Repo</a>
     </div>
   </div>
